--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "passport-local-example",
+  "name": "api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "dev": "nodemon ./bin/www -e js,twig"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.16.2",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.7.5",
+    "joi": "^17.3.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.8",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "twig": "~0.10.3"
+    "path": "^0.12.7",
+    "twig": "~0.10.3",
+    "xtend": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
